@@ -35,13 +35,13 @@ public interface AssessmentGradingIfc
 	// status = 4: the assessment has be republished. this assessmengGradingData needs to be resubmit
 	// status = 5: there is no submission but grader updat something in the score page
 
-	public static final Integer AUTO_GRADED = new Integer(2);
+	public static final Integer AUTO_GRADED = Integer.valueOf(2);
 
-	public static final Integer NEED_HUMAN_ATTENTION = new Integer(3);
+	public static final Integer NEED_HUMAN_ATTENTION = Integer.valueOf(3);
 
-	public static final Integer NEED_RESUBMIT = new Integer(4);
+	public static final Integer NEED_RESUBMIT = Integer.valueOf(4);
 
-	public static final Integer NO_SUBMISSION = new Integer(5);
+	public static final Integer NO_SUBMISSION = Integer.valueOf(5);
 
 
   Long getAssessmentGradingId();
