@@ -26,29 +26,29 @@ import java.util.Date;
 
 public interface TypeIfc extends java.io.Serializable {
   // This has the exact same list as TypeFacade. Please keep both list updated
-  public static Long MULTIPLE_CHOICE = new Long(1);
-  public static Long MULTIPLE_CORRECT = new Long(2);
-  public static Long MULTIPLE_CHOICE_SURVEY = new Long(3);
-  public static Long TRUE_FALSE = new Long(4);
-  public static Long ESSAY_QUESTION = new Long(5);
-  public static Long FILE_UPLOAD = new Long(6);
-  public static Long AUDIO_RECORDING = new Long(7);
-  public static Long FILL_IN_BLANK = new Long(8);
-  public static Long FILL_IN_NUMERIC = new Long(11);
-  public static Long MULTIPLE_CORRECT_SINGLE_SELECTION = new Long(12);
-  public static Long MATCHING = new Long(9);
+  public static Long MULTIPLE_CHOICE = Long.valueOf(1);
+  public static Long MULTIPLE_CORRECT = Long.valueOf(2);
+  public static Long MULTIPLE_CHOICE_SURVEY = Long.valueOf(3);
+  public static Long TRUE_FALSE = Long.valueOf(4);
+  public static Long ESSAY_QUESTION = Long.valueOf(5);
+  public static Long FILE_UPLOAD = Long.valueOf(6);
+  public static Long AUDIO_RECORDING = Long.valueOf(7);
+  public static Long FILL_IN_BLANK = Long.valueOf(8);
+  public static Long FILL_IN_NUMERIC = Long.valueOf(11);
+  public static Long MULTIPLE_CORRECT_SINGLE_SELECTION = Long.valueOf(12);
+  public static Long MATCHING = Long.valueOf(9);
   // these are section type available in this site,
-  public static Long DEFAULT_SECTION = new Long(21);
+  public static Long DEFAULT_SECTION = Long.valueOf(21);
   // these are assessment template type available in this site,
-  public static Long TEMPLATE_QUIZ = new Long(41);
-  public static Long TEMPLATE_HOMEWORK = new Long(42);
-  public static Long TEMPLATE_MIDTERM = new Long(43);
-  public static Long TEMPLATE_FINAL = new Long(44);
+  public static Long TEMPLATE_QUIZ = Long.valueOf(41);
+  public static Long TEMPLATE_HOMEWORK = Long.valueOf(42);
+  public static Long TEMPLATE_MIDTERM = Long.valueOf(43);
+  public static Long TEMPLATE_FINAL = Long.valueOf(44);
   // these are assessment type available in this site,
-  public static Long QUIZ = new Long(61);
-  public static Long HOMEWORK = new Long(62);
-  public static Long MIDTERM = new Long(63);
-  public static Long FINAL = new Long(64);
+  public static Long QUIZ = Long.valueOf(61);
+  public static Long HOMEWORK = Long.valueOf(62);
+  public static Long MIDTERM = Long.valueOf(63);
+  public static Long FINAL = Long.valueOf(64);
   public static String SITE_AUTHORITY = "stanford.edu";
   public static String DOMAIN_ASSESSMENT_ITEM = "assessment.item";
 
