@@ -75,8 +75,8 @@ public class PublishedAccessControl
    */
   public PublishedAccessControl()
   {
-    this.submissionsAllowed = new Integer(9999); // =  no limit
-    this.submissionsSaved = new Integer(1); // no. of copy
+    this.submissionsAllowed =  Integer.valueOf(9999); // =  no limit
+    this.submissionsSaved =  Integer.valueOf(1); // no. of copy
   }
 
   public PublishedAccessControl(Integer submissionsAllowed, Integer submissionsSaved,
