@@ -45,14 +45,14 @@ public class QuestionPoolData
 {
   /** Use serialVersionUID for interoperability. */
   private static final long serialVersionUID = 9180085666292824370L;
-  public static final Long ACCESS_DENIED = new Long(30);
-  public static final Long READ_ONLY = new Long(31);
-  public static final Long READ_COPY = new Long(32);
-  public static final Long READ_WRITE = new Long(33);
-  public static final Long ADMIN = new Long(34);
-  public static final Long DEFAULT_TYPEID = new Long(0);
-  public static final Long DEFAULT_INTELLECTUAL_PROPERTYID = new Long(0);
-  public static final Long ROOT_POOL = new Long(0);
+  public static final Long ACCESS_DENIED =   Long.valueOf(30);
+  public static final Long READ_ONLY =   Long.valueOf(31);
+  public static final Long READ_COPY =   Long.valueOf(32);
+  public static final Long READ_WRITE = Long.valueOf(33);
+  public static final Long ADMIN = Long.valueOf(34);
+  public static final Long DEFAULT_TYPEID = Long.valueOf(0);
+  public static final Long DEFAULT_INTELLECTUAL_PROPERTYID = Long.valueOf(0);
+  public static final Long ROOT_POOL = Long.valueOf(0);
 
   private Long questionPoolId;
   private String title;
@@ -425,7 +425,7 @@ public class QuestionPoolData
   // for JSF, sigh - daisyf
   public Integer getQuestionSize()
   {
-    return new Integer(items.size());
+    return   Integer.valueOf(items.size());
   }
 
   // for JSF, sigh - daisyf
@@ -473,6 +473,6 @@ public class QuestionPoolData
   
   public Integer getQuestionPoolItemSize()
   {
-	  return new Integer(questionPoolItems.size());
+	  return  Integer.valueOf(questionPoolItems.size());
   }
 }
