@@ -46,11 +46,11 @@ public class ItemManager {
   public ItemData prepareItem() {
       ItemData item = new ItemData();
       item.setInstruction("Matching game");
-      item.setTypeId(new Long(9));
-      item.setScore(new Float(10));
-      item.setDiscount(new Float(0));
+      item.setTypeId( Long.valueOf(9));
+      item.setScore( Float.valueOf(10));
+      item.setDiscount(Float.valueOf(0));
       item.setHasRationale(Boolean.FALSE);
-      item.setStatus(new Integer(1));
+      item.setStatus( Integer.valueOf(1));
       item.setCreatedBy("1");
       item.setCreatedDate(new Date());
       item.setLastModifiedBy("1");
@@ -75,19 +75,19 @@ public class ItemManager {
     HashSet textSet = new HashSet();
     ItemText text1 = new ItemText();
     text1.setItem(item);
-    text1.setSequence(new Long(1));
+    text1.setSequence( Long.valueOf(1));
     text1.setText("cat has");
     HashSet answerSet1 = new HashSet();
     HashSet answerFeedbackSet1 = new HashSet();
-    Answer answer1 = new Answer(text1, "2 legs", new Long(1), "i",
-    		Boolean.FALSE, null, new Float(0), new Float(0));
+    Answer answer1 = new Answer(text1, "2 legs", Long.valueOf(1), "i",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0));
     answerFeedbackSet1.add(new AnswerFeedback(answer1, "incorrect", "sorry"));
     answer1.setAnswerFeedbackSet(answerFeedbackSet1);
     answerSet1.add(answer1);
-    answerSet1.add(new Answer(text1, "3 legs", new Long(2), "ii",
-    		Boolean.FALSE, null, new Float(0), new Float(0)));
-    answerSet1.add(new Answer(text1, "4 legs", new Long(3), "iii",
-    		Boolean.TRUE, null, new Float(5), new Float(0)));
+    answerSet1.add(new Answer(text1, "3 legs", Long.valueOf(2), "ii",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0)));
+    answerSet1.add(new Answer(text1, "4 legs", Long.valueOf(3), "iii",
+    		Boolean.TRUE, null, Float.valueOf(5), Float.valueOf(0)));
     text1.setAnswerSet(answerSet1);
 
     textSet.add(text1);
@@ -97,12 +97,12 @@ public class ItemManager {
     text2.setSequence(new Long(2));
     text2.setText("chicken has");
     HashSet answerSet2 = new HashSet();
-    answerSet2.add(new Answer(text2, "2 legs", new Long(1), "i",
-    		Boolean.TRUE, null, new Float(5), new Float(0)));
-    answerSet2.add(new Answer(text2, "3 legs", new Long(2), "ii",
-    		Boolean.FALSE, null, new Float(0), new Float(0)));
-    answerSet2.add(new Answer(text2, "4 legs", new Long(3), "iii",
-    		Boolean.FALSE, null, new Float(0), new Float(0)));
+    answerSet2.add(new Answer(text2, "2 legs", Long.valueOf(1), "i",
+    		Boolean.TRUE, null, Float.valueOf(5), Float.valueOf(0)));
+    answerSet2.add(new Answer(text2, "3 legs", Long.valueOf(2), "ii",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0)));
+    answerSet2.add(new Answer(text2, "4 legs", Long.valueOf(3), "iii",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0)));
     text2.setAnswerSet(answerSet2);
     textSet.add(text2);
 
@@ -111,12 +111,12 @@ public class ItemManager {
     text3.setSequence(new Long(3));
     text3.setText("baby has");
     HashSet answerSet3 = new HashSet();
-    answerSet3.add(new Answer(text3, "2 legs", new Long(1), "i",
-    		Boolean.FALSE, null, new Float(0), new Float(0)));
-    answerSet3.add(new Answer(text3, "3 legs", new Long(2), "ii",
-    		Boolean.FALSE, null, new Float(0), new Float(0)));
-    answerSet3.add(new Answer(text3, "4 legs", new Long(3), "iii",
-    		Boolean.TRUE, null, new Float(5), new Float(0)));
+    answerSet3.add(new Answer(text3, "2 legs", Long.valueOf(1), "i",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0)));
+    answerSet3.add(new Answer(text3, "3 legs", Long.valueOf(2), "ii",
+    		Boolean.FALSE, null, Float.valueOf(0), Float.valueOf(0)));
+    answerSet3.add(new Answer(text3, "4 legs", Long.valueOf(3), "iii",
+    		Boolean.TRUE, null, Float.valueOf(5), Float.valueOf(0)));
     text3.setAnswerSet(answerSet3);
     textSet.add(text3);
     return textSet;
