@@ -38,29 +38,29 @@ public class TypeFacade implements Serializable, TypeIfc{
 	 * 
 	 */
 	private static final long serialVersionUID = -3400550482739705371L;
-public static final Long MULTIPLE_CHOICE = new Long(1);
-  public static final Long MULTIPLE_CORRECT = new Long(2);
-  public static final Long MULTIPLE_CHOICE_SURVEY = new Long(3);
-  public static final Long TRUE_FALSE = new Long(4);
-  public static final Long ESSAY_QUESTION = new Long(5);
-  public static final Long FILE_UPLOAD = new Long(6);
-  public static final Long AUDIO_RECORDING = new Long(7);
-  public static final Long FILL_IN_BLANK = new Long(8);
-  public static final Long FILL_IN_NUMERIC = new Long(11);
-  public static final Long MATCHING = new Long(9);
-  public static final Long MULTIPLE_CORRECT_SINGLE_SELECTION = new Long(12);
+  public static final Long MULTIPLE_CHOICE =  Long.valueOf(1);
+  public static final Long MULTIPLE_CORRECT = Long.valueOf(2);
+  public static final Long MULTIPLE_CHOICE_SURVEY = Long.valueOf(3);
+  public static final Long TRUE_FALSE = Long.valueOf(4);
+  public static final Long ESSAY_QUESTION = Long.valueOf(5);
+  public static final Long FILE_UPLOAD = Long.valueOf(6);
+  public static final Long AUDIO_RECORDING = Long.valueOf(7);
+  public static final Long FILL_IN_BLANK = Long.valueOf(8);
+  public static final Long FILL_IN_NUMERIC = Long.valueOf(11);
+  public static final Long MATCHING = Long.valueOf(9);
+  public static final Long MULTIPLE_CORRECT_SINGLE_SELECTION = Long.valueOf(12);
   // these are section type available in this site,
-  public static final Long DEFAULT_SECTION = new Long(21);
+  public static final Long DEFAULT_SECTION = Long.valueOf(21);
   // these are assessment template type available in this site,
-  public static final Long TEMPLATE_QUIZ = new Long(41);
-  public static final Long TEMPLATE_HOMEWORK = new Long(42);
-  public static final Long TEMPLATE_MIDTERM = new Long(43);
-  public static final Long TEMPLATE_FINAL = new Long(44);
+  public static final Long TEMPLATE_QUIZ = Long.valueOf(41);
+  public static final Long TEMPLATE_HOMEWORK = Long.valueOf(42);
+  public static final Long TEMPLATE_MIDTERM = Long.valueOf(43);
+  public static final Long TEMPLATE_FINAL = Long.valueOf(44);
   // these are assessment type available in this site,
-  public static final Long QUIZ = new Long(61);
-  public static final Long HOMEWORK = new Long(62);
-  public static final Long MIDTERM = new Long(63);
-  public static final Long FINAL = new Long(64);
+  public static final Long QUIZ = Long.valueOf(61);
+  public static final Long HOMEWORK = Long.valueOf(62);
+  public static final Long MIDTERM = Long.valueOf(63);
+  public static final Long FINAL = Long.valueOf(64);
 
   private Long typeId;
   private String authority;
